--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
 <!doctype html>
-<title>Chris Valmonte</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-<meta name="description" content="I design things and code them onto the web." />
-<meta property="og:site_name" content="chrisvalmonte.com" />
-<meta property="og:title" content="Chris Valmonte" />
-<meta property="og:description" content="I design things and code them onto the web." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="http://chrisvalmonte.com" />
-<meta property="og:image" content="http://chrisvalmonte.com/img/og-image.png" />
-<meta property="og:image:type" content="image/png" />
-<meta property="og:image:width" content="768" />
-<meta property="og:image:height" content="416" />
-<link rel="icon" type="image/png" href="img/favicon.png" />
-<link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
-<link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
+<head>
+  <title>Chris Valmonte</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="description" content="I design things and code them onto the web." />
+  <meta property="og:site_name" content="chrisvalmonte.com" />
+  <meta property="og:title" content="Chris Valmonte" />
+  <meta property="og:description" content="I design things and code them onto the web." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://chrisvalmonte.com" />
+  <meta property="og:image" content="http://chrisvalmonte.com/img/og-image.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="768" />
+  <meta property="og:image:height" content="416" />
+  <link rel="icon" type="image/png" href="img/favicon.png" />
+  <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+  <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />  
+</head>
 <body>
   <div class="messages"></div>
+  
   <script src="js/anime.js"></script>
   <script src="js/scripts.js"></script>
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111003043-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-111003043-1');
+  </script>
 </body>
