Updated message content and meta descriptions.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <title>Chris Valmonte</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <meta name="description" content="I design things and code them onto the web." />
+  <meta name="description" content="I design and code things." />
   <meta property="og:site_name" content="chrisvalmonte.com" />
   <meta property="og:title" content="Chris Valmonte" />
-  <meta property="og:description" content="I design things and code them onto the web." />
+  <meta property="og:description" content="I design and code things." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://chrisvalmonte.com" />
   <meta property="og:image" content="http://chrisvalmonte.com/img/og-image.png" />
