Added a floating action button to share my resume

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
   <title>Chris Valmonte</title>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <meta name="description" content="I design and code things." />
@@ -13,18 +14,24 @@
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="768" />
   <meta property="og:image:height" content="416" />
+
   <link rel="icon" type="image/png" href="img/favicon.png" />
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
-  <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />  
+  <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
+  <link href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" rel="stylesheet">
 </head>
 <body>
   <div class="messages"></div>
-  
+
+  <aside class="fab">
+    <a href="https://drive.google.com/file/d/1CYbFMlxM8SJCUE4x3UWR14ym_B8jqEBV/view?usp=sharing" target="_blank" role="button" aria-label="Share Chris Valmonte's resume">
+      <i class="fas fa-share"></i>
+    </a>
+  </aside>
+
   <script src="js/anime.js"></script>
   <script src="js/scripts.js"></script>
-  
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111003043-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111003043-1"></script><!-- Global site tag (gtag.js) - Google Analytics -->
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
