Changed content and FAB icon

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <aside class="fab">
     <a href="https://drive.google.com/file/d/1CYbFMlxM8SJCUE4x3UWR14ym_B8jqEBV/view?usp=sharing" target="_blank" role="button" aria-label="Share Chris Valmonte's resume">
-      <i class="fas fa-share"></i>
+      <i class="far fa-file-alt"></i>
     </a>
   </aside>
 
