Replaced resume FAB with reply FAB. Updated content again...

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <div class="messages"></div>
 
   <aside class="fab">
-    <a href="https://drive.google.com/file/d/1CYbFMlxM8SJCUE4x3UWR14ym_B8jqEBV/view?usp=sharing" target="_blank" role="button" aria-label="Share Chris Valmonte's resume">
-      <i class="far fa-file-alt"></i>
+    <a href="mailto:hello@chrisvalmonte.com" aria-label="Email Chris Valmonte">
+      <i class="fas fa-reply"></i>
     </a>
   </aside>
 
