Changed FAB aside tag to div

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 <body>
   <div class="messages"></div>
 
-  <aside class="fab">
+  <div class="fab">
     <a href="mailto:hello@chrisvalmonte.com" aria-label="Email Chris Valmonte">
       <i class="fas fa-reply"></i>
     </a>
-  </aside>
+  </div>
 
   <script src="js/anime.js"></script>
   <script src="js/scripts.js"></script>
