Display sent messages via a cookie.
index.html: Updated the meta descriptions.
js/scripts.js:
  - Added methods for checking, and setting the cookie.
  - Added a method to display the sent messages.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <meta name="description" content="I design and code things." />
+  <meta name="description" content="I design and code things on the web." />
   <meta property="og:site_name" content="chrisvalmonte.com" />
   <meta property="og:title" content="Chris Valmonte" />
-  <meta property="og:description" content="I design and code things." />
+  <meta property="og:description" content="I design and code things on the web." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://chrisvalmonte.com" />
   <meta property="og:image" content="http://chrisvalmonte.com/img/og-image.png" />
@@ -30,6 +30,7 @@
   </div>
 
   <script src="js/anime.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
   <script src="js/scripts.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111003043-1"></script><!-- Global site tag (gtag.js) - Google Analytics -->
   <script>
