Change project1 link to point to live website.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Chris Valmonte - Chat</title>
+		<title>Chris Valmonte</title>
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,14 +45,14 @@
 		<main id="work">
 			<section class="container">
 				<section id="project1" class="project w-67">
-					<a href="https://www.behance.net/gallery/60123613/CPC-Web-Interface-Customization" target="_blank" class="overlay">
+					<a href="https://olathe.municipal.codes" target="_blank" class="overlay">
 						<div class="overlay-inner">
 							<h3 class="title">Web Interface Customization</h3>
 							<p class="description">
 								I customized Code Publishing Company's legal hosting web application UI to match the style of the Olathe, Kansas, municipal government's website.
 								<br>
 								<br>
-								View on Behance →
+								View the live website →
 							</p>
 						</div>
 					</a>
