refactor: Delegate drawer-link click events to the drawer.

--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
 
 		<nav id="nav-menu-drawer">
 			<ul class="nav-links">
-				<li><a href="javascript:void(0)">Work</a></li>
+				<li><a class="link" href="javascript:void(0)">Work</a></li>
 				<!-- TODO: Create "About" page -->
 				<!-- <li><a href="#">About</a></li> -->
-				<li><a href="Valmonte-Resume.pdf" target="_blank">Resume</a></li>
-				<li><a href="chat.html">Chat</a></li>
+				<li><a class="link" href="Valmonte-Resume.pdf" target="_blank">Resume</a></li>
+				<li><a class="link" href="chat.html">Chat</a></li>
 			</ul>
 		</nav>
 
