content: Updated resume and header summary.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<header>
 			<h1 class="headline">I'm Chris, a front-end <span class="word"></span>.</h1>
-			<h2 class="summary">I create user interfaces that are usable, responsive, and delightful.</h2>
+			<h2 class="summary">I create web products that are usable, responsive, and delightful.</h2>
 		</header>
 
 		<main id="work">
