feat: Add skip link.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 	</head>
 
 	<body>
+		<a id="skip-link" href="#work">Skip to main content</a>
+
 		<nav id="site-nav">
 			<span class="logo">Chris Valmonte</span>
 
@@ -42,7 +44,7 @@
 			<h2 class="summary">I create web products that are usable, responsive, and delightful.</h2>
 		</header>
 
-		<main id="work">
+		<main id="work" tabindex="-1">
 			<section class="container">
 				<section id="project1" class="project w-67">
 					<a href="https://olathe.municipal.codes" target="_blank" class="overlay">
