feat: Remove #nav-menu-drawer from tab order and focus it when it's open.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 			</div>
 		</footer>
 
-		<nav id="nav-menu-drawer">
+		<nav id="nav-menu-drawer" tabindex="-1">
 			<ul class="nav-links">
 				<li><a class="link" href="javascript:void(0)">Work</a></li>
 				<!-- TODO: Create "About" page -->
