--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 		<main id="work" class="hide-from-drawer">
 			<section class="container">
-				<section id="project1" class="project w-67">
+				<section id="project1" class="project w-67" title="Olathe, KS Municipal Code">
 					<a href="https://olathe.municipal.codes" target="_blank" class="overlay">
 						<div class="overlay-inner">
 							<h3 class="title">Web Interface Customization</h3>
@@ -59,7 +59,7 @@
 						</div>
 					</a>
 				</section>
-				<section id="project2" class="project w-33">
+				<section id="project2" class="project w-33" title="Code Publishing Co.'s Share Feature">
 					<a href="https://www.behance.net/gallery/60122127/CPC-Share-Modal" target="_blank" class="overlay">
 						<div class="overlay-inner">
 							<h3 class="title">Share Modal Dialog</h3>
@@ -72,10 +72,10 @@
 						</div>
 					</a>
 				</section>
-				<section id="project3" class="project w-33">
+				<section id="project3" class="project w-33" title="Graduate App - Mobile Prototype">
 					<a href="https://xd.adobe.com/view/663443e3-edb5-482a-9517-6a38ce6de56a/" target="_blank" class="overlay">
 						<div class="overlay-inner">
-							<h3 class="title">Grad App Mobile Concept</h3>
+							<h3 class="title">Graduate App Mobile Concept</h3>
 							<p class="description">
 								Inspired by my bad experience when managing my graduate school applications from my mobile phone, I prototyped a redesign.
 								<br>
@@ -85,7 +85,7 @@
 						</div>
 					</a>
 				</section>
-				<section id="project4" class="project w-67">
+				<section id="project4" class="project w-67" title="Northwest Filipino-American Student Alliance Conference Website">
 					<a href="https://github.com/chrisvalmonte/nwfasaisangbagsak2017.com" target="_blank" class="overlay">
 						<div class="overlay-inner">
 							<h3 class="title">NWFASA's Conference Website</h3>
