feat: Add ARIA roles.
Add ARIA roles to:
- projects
- footer links
- navigation menu button (mobile)

Move toggleTabIndex method into toggleNavMenuDrawer since it's not reused anywhere else

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<li><a href="chat.html">Chat</a></li>
 			</ul>
 
-			<button id="nav-menu" class="btn">Menu</button>
+			<button id="nav-menu" class="btn" aria-controls="nav-menu-drawer" aria-expanded="false">Menu</button>
 		</nav>
 
 		<header>
@@ -46,7 +46,7 @@
 
 		<main id="work" class="hide-from-drawer">
 			<section class="container">
-				<section id="project1" class="project w-67" title="Olathe, KS Municipal Code">
+				<section id="project1" class="project w-67" title="Olathe, KS Municipal Code" aria-label="Olathe, KS Municipal Code">
 					<a href="https://olathe.municipal.codes" target="_blank" class="overlay">
 						<div class="overlay-inner">
 							<h3 class="title">Web Interface Customization</h3>
@@ -59,7 +59,7 @@
 						</div>
 					</a>
 				</section>
-				<section id="project2" class="project w-33" title="Code Publishing Co.'s Share Feature">
+				<section id="project2" class="project w-33" title="Code Publishing Co.'s Share Feature" aria-label="Code Publishing Co.'s Share Feature">
 					<a href="https://www.behance.net/gallery/60122127/CPC-Share-Modal" target="_blank" class="overlay">
 						<div class="overlay-inner">
 							<h3 class="title">Share Modal Dialog</h3>
@@ -72,7 +72,7 @@
 						</div>
 					</a>
 				</section>
-				<section id="project3" class="project w-33" title="Graduate App - Mobile Prototype">
+				<section id="project3" class="project w-33" title="Graduate App - Mobile Prototype" aria-label="Graduate App - Mobile Prototype">
 					<a href="https://xd.adobe.com/view/663443e3-edb5-482a-9517-6a38ce6de56a/" target="_blank" class="overlay">
 						<div class="overlay-inner">
 							<h3 class="title">Graduate App Mobile Concept</h3>
@@ -85,7 +85,7 @@
 						</div>
 					</a>
 				</section>
-				<section id="project4" class="project w-67" title="Northwest Filipino-American Student Alliance Conference Website">
+				<section id="project4" class="project w-67" title="Northwest Filipino-American Student Alliance Conference Website" aria-label="Northwest Filipino-American Student Alliance Conference Website">
 					<a href="https://github.com/chrisvalmonte/nwfasaisangbagsak2017.com" target="_blank" class="overlay">
 						<div class="overlay-inner">
 							<h3 class="title">NWFASA's Conference Website</h3>
@@ -108,10 +108,10 @@
 			<span class="logo">Chris Valmonte</span>
 
 			<div class="social-media hide-from-drawer">
-				<a href="https://www.github.com/chrisvalmonte"><i class="fab fa-github"></i></a>
-				<a href="https://www.linkedin.com/in/chrisvalmonte"><i class="fab fa-linkedin"></i></a>
-				<a href="https://www.behance.net/chrisvalmonte"><i class="fab fa-behance"></i></a>
-				<a href="https://www.instagram.com/chrisvalmonte.ig/"><i class="fab fa-instagram"></i></a>
+				<a href="https://www.github.com/chrisvalmonte" aria-label="Github"><i class="fab fa-github"></i></a>
+				<a href="https://www.linkedin.com/in/chrisvalmonte" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+				<a href="https://www.behance.net/chrisvalmonte" aria-label="Behance"><i class="fab fa-behance"></i></a>
+				<a href="https://www.instagram.com/chrisvalmonte.ig/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
 			</div>
 		</footer>
 
