feat: Various a11y fixes.
- Move project aria-labels from the sections to the links.
- On focus and hover, underline links in the navigation bar.
- On focus and hover, color the navigation menu button.
- Add aria-expanded attribute to the navigation drawer instead of the navigation menu button.
- Style the navigation drawer based on the aria-expanded attribute (removed CSS noise from open class).

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<li><a href="chat.html">Chat</a></li>
 			</ul>
 
-			<button id="nav-menu" class="btn" aria-controls="nav-menu-drawer" aria-expanded="false">Menu</button>
+			<button id="nav-menu" class="btn" aria-controls="nav-menu-drawer">Menu</button>
 		</nav>
 
 		<header>
@@ -46,8 +46,8 @@
 
 		<main id="work" class="hide-from-drawer">
 			<section class="container">
-				<section id="project1" class="project w-67" title="Olathe, KS Municipal Code" aria-label="Olathe, KS Municipal Code">
-					<a href="https://olathe.municipal.codes" target="_blank" class="overlay">
+				<section id="project1" class="project w-67" title="Olathe, Kansas Municipal Code Interface Customization">
+					<a href="https://olathe.municipal.codes" target="_blank" class="overlay" aria-label="Olathe, Kansas Municipal Code Interface Customization">
 						<div class="overlay-inner">
 							<h3 class="title">Web Interface Customization</h3>
 							<p class="description">
@@ -59,8 +59,8 @@
 						</div>
 					</a>
 				</section>
-				<section id="project2" class="project w-33" title="Code Publishing Co.'s Share Feature" aria-label="Code Publishing Co.'s Share Feature">
-					<a href="https://www.behance.net/gallery/60122127/CPC-Share-Modal" target="_blank" class="overlay">
+				<section id="project2" class="project w-33" title="Code Publishing Company's Share Feature">
+					<a href="https://www.behance.net/gallery/60122127/CPC-Share-Modal" target="_blank" class="overlay" aria-label="Code Publishing Company's Share Feature">
 						<div class="overlay-inner">
 							<h3 class="title">Share Modal Dialog</h3>
 							<p class="description">
@@ -72,8 +72,8 @@
 						</div>
 					</a>
 				</section>
-				<section id="project3" class="project w-33" title="Graduate App - Mobile Prototype" aria-label="Graduate App - Mobile Prototype">
-					<a href="https://xd.adobe.com/view/663443e3-edb5-482a-9517-6a38ce6de56a/" target="_blank" class="overlay">
+				<section id="project3" class="project w-33" title="Graduate App - Mobile Prototype">
+					<a href="https://xd.adobe.com/view/663443e3-edb5-482a-9517-6a38ce6de56a/" target="_blank" class="overlay" aria-label="Graduate App - Mobile Prototype">
 						<div class="overlay-inner">
 							<h3 class="title">Graduate App Mobile Concept</h3>
 							<p class="description">
@@ -85,8 +85,8 @@
 						</div>
 					</a>
 				</section>
-				<section id="project4" class="project w-67" title="Northwest Filipino-American Student Alliance Conference Website" aria-label="Northwest Filipino-American Student Alliance Conference Website">
-					<a href="https://github.com/chrisvalmonte/nwfasaisangbagsak2017.com" target="_blank" class="overlay">
+				<section id="project4" class="project w-67" title="Northwest Filipino-American Student Alliance Conference Website">
+					<a href="https://github.com/chrisvalmonte/nwfasaisangbagsak2017.com" target="_blank" class="overlay" aria-label="Northwest Filipino-American Student Alliance Conference Website">
 						<div class="overlay-inner">
 							<h3 class="title">NWFASA's Conference Website</h3>
 							<p class="description">
@@ -115,7 +115,7 @@
 			</div>
 		</footer>
 
-		<nav id="nav-menu-drawer" tabindex="-1">
+		<nav id="nav-menu-drawer" tabindex="-1" aria-expanded="false">
 			<ul class="nav-links">
 				<li><a class="link" href="javascript:void(0)" tabindex="-1">Work</a></li>
 				<!-- TODO: Create "About" page -->
