content: Update resume, headline, and WI customization description.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		</nav>
 
 		<header>
-			<h1 class="headline">I'm Chris, a front-end <span class="word"></span>.</h1>
+			<h1 class="headline">I'm Chris, a web <span class="word"></span>.</h1>
 			<h2 class="summary">I create web products that are usable, responsive, and delightful.</h2>
 		</header>
 
@@ -51,7 +51,7 @@
 						<div class="overlay-inner">
 							<h3 class="title">Web Interface Customization</h3>
 							<p class="description">
-								I customized Code Publishing Company's legal hosting web application UI to match the style of the Olathe, Kansas, municipal government's website.
+								I customized Code Publishing Company's modern web interface to match the style of the Olathe, Kansas, municipal government's website.
 								<br>
 								<br>
 								View the live website →
